# rmk-mekk-elek

./: Cargo.toml  README.md  flake.nix
rp2040/: Cargo.toml  Embed.toml
rp2040/.cargo/: config.toml
rp2040/src/: keymap.rs  lhs.rs  lilos_support.rs  main.rs  rhs.rs
rp2040/src/lilos_support/: fifo.rs  timer.rs
src/: debounce.rs  keymap.rs  keystate.rs  lib.rs  main.rs  matrix.rs
src/keystate/: button.rs  layer.rs  mod.rs  modtap.rs  prelude.rs
