[package]
name = "rmk-mekk-elek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.7.16", features = ["defmt", "defmt-impl"] }
no-std-compat = "0.4.1"
usbd-human-interface-device = "0.3.1"
